--- a/pom.xml
+++ b/pom.xml
@@ -1656,6 +1656,9 @@ under the License.
 
 						<!-- The most recently published version configuration file -->
 						<exclude>flink-test-utils-parent/flink-migration-test-utils/src/main/resources/most_recently_published_version</exclude>
+
+						<!-- Decodable -->
+						<exclude>**/README-decodable.md</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
