DE-1548: readme - operation procedures for decodable flink (#12)

--- a/pom.xml
+++ b/pom.xml
@@ -1595,6 +1595,9 @@ under the License.
 
 						<!-- AWS SDK config that does not support license headers -->
 						<exclude>**/awssdk/global/handlers/execution.interceptors</exclude>
+
+						<!-- Decodable -->
+						<exclude>**/README-decodable.md</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
