--- a/flink-filesystems/flink-s3-fs-base/pom.xml
+++ b/flink-filesystems/flink-s3-fs-base/pom.xml
@@ -32,7 +32,7 @@ under the License.
 
 	<properties>
 		<fs.s3.aws.version>1.12.319</fs.s3.aws.version>
-		<fs.hadoop-aws.decodable.version>3.2.2-dcd</fs.hadoop-aws.decodable.version>
+		<fs.hadoop-aws.decodable.version>3.2.2-deco2</fs.hadoop-aws.decodable.version>
 		<japicmp.skip>true</japicmp.skip>
 	</properties>
 
