DE-6005[1.18]: Refactor CuPi image tags (#104)
* DE-6005[1.18]: Change image tags: no "py" prefix, no "python310" suffix for Java images

* DE-6005[1.18]: Don't build docker images on PRs

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -75,7 +75,7 @@ jobs:
             PY_FLINK_VERSION="${FLINK_VERSION%-*}"
           fi
           echo "PY_FLINK_VERSION=$PY_FLINK_VERSION" >> $GITHUB_ENV
-          echo "IMAGE_IDENTIFIER=java11-python310" >> $GITHUB_ENV
+          echo "IMAGE_IDENTIFIER_JAVA=java11" >> $GITHUB_ENV
       - name: Decodable Flink Dist Name
         run: |
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
@@ -93,24 +93,24 @@ jobs:
           mv ${{ github.workspace }}/${{ env.FLINK_DIST_NAME }} /home/runner/work/decodable-flink/decodable-flink/tools/decodable/flink.tgz
       # See for Docker: https://github.com/docker/build-push-action
       - name: Build and push (Java-Flink)
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/build-push-action@v2
         with:
           file: /home/runner/work/decodable-flink/decodable-flink/tools/decodable/Dockerfile
           context: /home/runner/work/decodable-flink/decodable-flink/tools/decodable/
           platforms: linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: 671293015970.dkr.ecr.us-west-2.amazonaws.com/decodable-product-flink:custom-${{ env.FLINK_VERSION }}-${{ env.IMAGE_IDENTIFIER }}
+          tags: 671293015970.dkr.ecr.us-west-2.amazonaws.com/decodable-product-flink:custom-${{ env.FLINK_VERSION }}-${{ env.IMAGE_IDENTIFIER_JAVA }}
       - name: Build and push (PyFlink)
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/build-push-action@v2
         with:
           file: /home/runner/work/decodable-flink/decodable-flink/tools/decodable/Dockerfile.pyflink
           context: /home/runner/work/decodable-flink/decodable-flink/tools/decodable/
           platforms: linux/arm64
           build-args: |
-            CI_DOCKER_BASE=671293015970.dkr.ecr.us-west-2.amazonaws.com/decodable-product-flink:custom-${{ env.FLINK_VERSION }}-${{ env.IMAGE_IDENTIFIER }}
+            CI_DOCKER_BASE=671293015970.dkr.ecr.us-west-2.amazonaws.com/decodable-product-flink:custom-${{ env.FLINK_VERSION }}-${{ env.IMAGE_IDENTIFIER_JAVA }}
             CI_DOCKER_PY_FLINK_VERSION=${{ env.PY_FLINK_VERSION }}
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: 671293015970.dkr.ecr.us-west-2.amazonaws.com/decodable-product-flink:custom-py-${{ env.FLINK_VERSION }}-${{ env.IMAGE_IDENTIFIER }}
+          tags: 671293015970.dkr.ecr.us-west-2.amazonaws.com/decodable-product-flink:custom-${{ env.FLINK_VERSION }}-${{ env.IMAGE_IDENTIFIER_JAVA }}-python310
       - name: Deploy maven artifacts
         if: github.event_name != 'pull_request'
         run: ./mvnw deploy -DskipTests -Dscala-2.12 -Ddocs-and-source -Drat.skip
