--- a/tools/decodable/Dockerfile.pyflink
+++ b/tools/decodable/Dockerfile.pyflink
@@ -4,7 +4,7 @@ ARG CI_DOCKER_PY_FLINK_VERSION
 
 # install python3 and pip3
 RUN apt-get update -y && \
-  apt-get install -y python3 python3-pip python3-dev && \
+  apt-get install -y python3 python3-pip python3-dev unzip && \
   rm -rf /var/lib/apt/lists/*
 
 
